--- a/3.html
+++ b/3.html
@@ -21,7 +21,7 @@
 <a href="3.html"><li>여행</li></a>
 </ul>
 <h2>여행</h2>
-<img src="여행사진.jpg" width="400" height="400">
+<img src="여행사진.JPG" width="400" height="400">
 
 <br>
 <p> 여행은 일이나 유람을 목적으로 다른 고장이나 외국에 가는 일이나, 자기 거주지를 떠나 객지에 나다니는 일, 다른 고장이나, 다른 국가에 가는 일 등을 말한다.[1] 여행은 비교적으로 멀리 있는 지역 간 사람들의 움직임을 말한다. 그 움직임은 걷거나, 자전거를 타거나, 차량이나 기차, 보트, 버스, 비행기 등의 다양한 교통수단을 이용해 오고가는 것을 말한다. 또한 짐을 가지고 갈 수도 있고, 짐 없이 갈 수도 있다.
