--- a/1.html
+++ b/1.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-<title>눈물촉촉 추억_1/title>
+<title>눈물촉촉 추억_1</title>
 <meta charset="utf-8">
 </head>
 
@@ -22,7 +22,7 @@
 <a href="3.html"><li>여행</li></a>
 </ul>
 <h2>카메라</h2>
-<img src="카메라사진.jpg" width="400" height="400">
+<img src="카메라사진.JPG" width="400" height="400">
 <p> 카메라(Camera)는 빛을 이용하여 그림을 촬영하여 이미지를 기록하는 도구이다. 이렇게 촬영되어 만들어진 이미지를 사진이라 한다.
   촬영된 이미지를 한 장씩 인화하여 스틸 사진으로 제작하기도 하고, 여러 장의 촬영된 이미지를 이용하여 영화와 같이 동영상을 제작하기도 한다.
   카메라는 가시광선을 이용하여 이미지를 만드는 것이 일반적이나 엑스선 촬영, 적외선 촬영, 자외선 촬영과 같이 전자기파 영역의 비가시광선을 이용하기도 한다.
