--- a/2.html
+++ b/2.html
@@ -21,12 +21,10 @@
 <a href="3.html"><li>여행</li></a>
 </ul>
 <h2>렌즈</h2>
-<img src="렌즈사진.jpg" width="400"height="400">
+<img src="렌즈사진.JPG" width="400"height="400">
 
 <p> 렌즈(lens, 문화어: 렌스)는 빛을 모으거나 분산시키는 도구로, 보통 유리로 만든다. 전자기파를 위해서 만든 비슷한 도구도 렌즈로 불리는데,
   예를 들어 마이크로파 렌즈는 파라핀으로 만든다. 카메라를 위해 특별히 제작된 렌즈는 사진 렌즈라고 한다.
 </p>
-
- <br><img src="1.jpg" width="90%" >
 </body>
 </html>
