--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
   사진을 감상하며 추억에 젖어 바쁘고 지친 하루의 노고를 잠시 잊는 시간을 갖도록하자.
 </p>
 <br>
-<img src="강원도.JPG" width="100%"
+<img src="Gang.JPG" width="100%"
 </body>
 </html>
