--- a/3.html
+++ b/3.html
@@ -27,6 +27,27 @@
 <p> 여행은 일이나 유람을 목적으로 다른 고장이나 외국에 가는 일이나, 자기 거주지를 떠나 객지에 나다니는 일, 다른 고장이나, 다른 국가에 가는 일 등을 말한다.[1] 여행은 비교적으로 멀리 있는 지역 간 사람들의 움직임을 말한다. 그 움직임은 걷거나, 자전거를 타거나, 차량이나 기차, 보트, 버스, 비행기 등의 다양한 교통수단을 이용해 오고가는 것을 말한다. 또한 짐을 가지고 갈 수도 있고, 짐 없이 갈 수도 있다.
 </p>
 
+<p>
+  <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://EXAMPLE.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</P>
 
 </body>
 </html>
